--- a/port.html
+++ b/port.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="port.css" />
   </head>
   <body>
-    <section>
+    <section class="top-banner">
       <div class="half-width">
         <h1>Welcome to</h1>
         <h1><span class="name-highlight">Jubair</span> Wits</h1>
