--- a/port.html
+++ b/port.html
@@ -16,7 +16,7 @@
     <section class="top-banner">
       <div class="half-width">
         <h1>Welcome to</h1>
-        <h1><span class="name-highlight">Jubair</span> Wits</h1>
+        <h1><span class="orange-highlight">Jubair</span> Wits</h1>
 
         <h3>The Last Poetic Species</h3>
 
@@ -28,10 +28,65 @@
           superstitious, but I am a little stitious. I believe that good things
           will come & good things take time.
         </p>
+        <a
+          class="link-button"
+          target="_blank"
+          href="https://www.facebook.com/jubair.jubu.33483/"
+          >Poke Here</a
+        >
       </div>
       <div class="half-width">
         <img src="images/profile1.png" alt="" />
       </div>
     </section>
+
+    <section class="AnotherSec">
+      <div class="half-width">
+        <img src="images/profile2.png" alt="" />
+      </div>
+
+      <div class="half-width">
+        <h2>Fantasist Soul</h2>
+        <h3> <span style="color: orange;">The me I want to be</span> </h3>
+        <p style="height: fit-content">
+          It's never too late to focus on Dream. I am chasing dream to be a
+          creative and manifest my artistry.I have to less to say then I
+          thought.Sometimes lil bit extrovert and sometimes fully introvert. But
+          you can freely ask anything and seek any help I'll try to do my best
+          for you.
+        </p>
+        <a
+          class="link-button"
+          target="_blank"
+          href="https://www.instagram.com/thejubairjubu/?hl=en"
+        >
+          Check Out</a
+        >
+      </div>
+    
+
+    </section>
+    <section>
+      <section class="Experience">
+        <h2>Experiences</h2>
+         <div id="left-box" class="half-width single-block">
+           <h2>Explore my soul</h2>
+           <h3><span class="orange-highlight">You can find lots</span> </h3>
+           <p>To inspire your new adventure.Design a life that you inspired to live.So never stop exploring. I am a great explorer and too much excited to explore new world.
+             <br>
+             Do you want to explore with me ?
+           </p>
+ 
+         </div>
+         <div id="right-box"  class="half-width single-block">
+           <h2>Connectivity</h2>
+           <h3><span class="orange-highlight">Fasten with Folks</span>  </h3>
+           <p>The most predominant things in life are Connections you make with others.You can change someones perspective by your small opinion. So now if you have any exposure you can stake with me. </p>
+
+         </div>
+      </section>
+      <footer>
+        © Jubair Jubu | All rights preserved.
+      </footer>
   </body>
 </html>
