mejor change the name of html file .

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
          <div id="right-box"  class="half-width single-block">
            <h2>Connectivity</h2>
            <h3><span class="orange-highlight">Fasten with Folks</span>  </h3>
-           <p>The most predominant things in life are Connections you make with others.You can change someones perspective by your small opinion. So now if you have any exposure you can stake with me. </p>
+           <p>The most predominant things in life are Connections you make with others.You can change someones perspective by your small opinion. So now if you have any exposure you can stake with me,  <br> Thank You . </p>
 
          </div>
       </section>
